Добавлены джобы для очистки бд от нподтвержденных юзеров и обновления задержки сдачи книг